# HierarchyCraftBenchmark

./: .gitignore  .gitmodules  README.md  benchmark.py  benchmark.sh  callbacks.py  extract_wandb_data.py  main.py  plots.py  pyproject.toml  requirements-cc.txt  requirements-dev.txt  requirements.txt  simple_job.sh  wandb_plots.py
notebooks/: plotting.ipynb
src/craftbench/: __main__.py  by_complexity.py  make_agent.py  make_env.py  maskable_ppo.py  maskable_ppo_stacked.py  maskable_ppo_tower.py  minecrafting.py  plots.py
src/craftbench/planning/: __init__.py  benchmark.py  fixed.py  parametrized.py
src/craftbench/wandb/: __init__.py  callbacks.py
src/craftbench/wandbench/: __init__.py  callbacks.py  extract_wandb_data.py
tests/: test_make_agent.py
