[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "craftbench"
dynamic = ["version", "readme", "dependencies"]
license = { text = "Apache-2.0 license" }
requires-python = ">=3.7"

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[project.scripts]
craftbench = "craftbench.__main__:main"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.mypy]
files = "src"
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
no_implicit_optional = true
no_implicit_reexport = false
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
